Major rewrite
Signed-off-by: Flytre <flytre7@gmail.com>